fix:bags mobile media

--- a/public/locales/ru/ru.json
+++ b/public/locales/ru/ru.json
@@ -21,7 +21,7 @@
       "regions": "Регионы",
       "traditions": "Традиции и Особенности",
       "visa": "Правила Въезда",
-      "safety": "Безопастность",
+      "safety": "Безопасность",
       "transport": "Транспорт",
       "connection": "Связь",
       "kitchen": "Национальная Кухня",
