--- a/public/locales/ru/ru.json
+++ b/public/locales/ru/ru.json
@@ -123,5 +123,12 @@
       "replenish": "Пополнить",
       "historyPayment": "Историй платежей"
     }
+  },
+  "CategoryNews": {
+    "news": "Новости туризма",
+    "recommend": "Полезные советы, лайфхаки",
+    "overview": "Обзоры",
+    "blog": "Блог Туристов",
+    "bestDestination": "Лучшие/Популярные направления"
   }
 }
