test:api to server 7

--- a/public/locales/en/en.json
+++ b/public/locales/en/en.json
@@ -30,7 +30,7 @@
       "phrasebook": "Phrasebook"
     }
   },
-  "CountryPage": {
+  "LocationPage": {
     "seo": {
       "title": "Kazahstan example",
       "description": "All about Kazakhstan. Where to eat in Kazakhstan. What to see in Kazakhstan. Where to go in Kazakhstan. Where to spend the night in Kazakhstan. Hotels in Kazakhstan. Motels in Kazakhstan."
