--- a/public/locales/ru/ru.json
+++ b/public/locales/ru/ru.json
@@ -30,7 +30,7 @@
       "phrasebook": "Разговорник"
     }
   },
-  "CountryPage": {
+  "LocationPage": {
     "seo": {
       "title": "Казахстан пример",
       "description": "Все о Казахстане. Где поесть в Казахстане. Что посмотреть в Казахстане. Куда сходить в Казахстане. Где переночевать в Казахстане. Отели в Казахстане. Мотели в Казахстане."
