fix: searchPage and Finder for connect with api

--- a/public/locales/ru/ru.json
+++ b/public/locales/ru/ru.json
@@ -145,6 +145,18 @@
             "styleRankings": "Стили отеля"
         }
     },
+    "SearchPage": {
+        "card": {
+            "type": {
+                "EATER": "Где поесть",
+                "ACCOMMODATION": "Где поспать",
+                "ATTRACTION": "Что посмотреть",
+                "location": "Куда поехать",
+                "article": "Что почитать",
+                "unknown": "Неизвестно"
+            }
+        }
+    },
     "Rates": {
         "ratingsWord": "оценок",
         "Rooms": "Номера",
